--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
 #Notification
-DEBUG=True
-EXT_LOGGING=False
-DEVELOP=True
+DEBUG_NOTIF=True
+EXT_LOGGING_NOTIF=False
+DEVELOP_NOTIF=True
 MONGO_NOTIF_DB=notification
 MONGO_NOTIF_URL=mongodb://mongo_notif_db:27017
 MONGO_NOTIF_HOST=mongo_notif_db
 MONGO_NOTIF_PORT=27017
+NOTIF_API_URL=http://api_notif:8201
 
 #UGC
 KAFKA_URL=localhost:9092
