--- a/deploy/configs_notif/notif.conf
+++ b/deploy/configs_notif/notif.conf
@@ -1,13 +1,13 @@
 server {
-    listen       80 default_server;
-    listen       [::]:80 default_server;
-    server_name  _;
+    listen       82 default_server;
+    listen       [::]:82 default_server;
+    server_name  notif;
 
     location /notif/admin {
-        proxy_pass http://adminnotif:8000/notif/admin;
+        proxy_pass http://adminnotif:8202/notif/admin;
     }
     location /notif/api {
-        proxy_pass http://api_notif:8001/notif/api;
+        proxy_pass http://api_notif:8201/notif/api;
     }
 
     location /static/ {
