--- a/deploy/logstash.conf
+++ b/deploy/logstash.conf
@@ -18,7 +18,7 @@ input {
 }
 
 output {
-  stdout {codec => rubydebug}
+  # stdout {codec => rubydebug}
   if "nginx" in [tags] {
       elasticsearch {
         hosts => [ "${ES_HOST}" ]
