--- a/docker-compose-notif.yml
+++ b/docker-compose-notif.yml
@@ -5,7 +5,7 @@ services:
     container_name: mongo_notif_db
     image: mongo
     ports:
-      - 27017:27017
+      - 27018:27018
     volumes:
       - mongo_notif_data:/mongo_notif_data
     networks:
@@ -22,10 +22,9 @@ services:
       - develop=False
     depends_on:
       - mongo_notif_db
-    ports:
-      - '8001:8001'
     networks:
       - notif
+      - auth_movie_admin # !!!
 
   adminnotif:
     # image: zomin/adminnotif
@@ -37,24 +36,23 @@ services:
       - .env
     depends_on:
       - mongo_notif_db
-    command: bash -c "python script.py && gunicorn admin_notif.wsgi --bind 0.0.0.0:8000"
+    command: bash -c "python script.py && gunicorn admin_notif.wsgi --bind 0.0.0.0:8202"
     ports:
-      - '8000:8000'
+      - '8202:8202'
     restart: on-failure
     networks:
       - notif
 
-
-  nginx:
+  nginx_notif:
     image: nginx:1.20.1-alpine
-    container_name: nginx
+    container_name: nginx_notif
     volumes:
       - notif_static_volume:/admin_notif/static
       - ./deploy/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./deploy/configs_notif:/etc/nginx/conf.d:ro
       - /tmp/logs/nginx/:/var/log/nginx/
     ports:
-      - "80:80"
+      - "82:82"
     restart: always
     depends_on:
         - api_notif
@@ -68,6 +66,8 @@ volumes:
 
 networks:
   notif:
+    driver: bridge
+  auth_movie_admin:
     driver: bridge
   # logging:
   #   driver: bridge
