--- a/flask_auth/requirements.txt
+++ b/flask_auth/requirements.txt
@@ -23,3 +23,5 @@ opentelemetry-sdk==1.10.0
 opentelemetry-instrumentation-flask==0.29b1
 opentelemetry-exporter-jaeger==1.10.0
 python-logstash==0.4.8
+aiohttp==3.8.3
+requests==2.28.2
