--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,3 +1,3 @@
 [settings]
-known_first_party=ugs_api, core, api, db, services, config, workers, db_conn, db_models
+known_first_party=ugs_api, core, api, db, services, config, workers, db_conn, db_models, enrichment_worker, rabbit_worker, sender_worker
 multi_line_output=3 
