--- a/docker-compose-notif_new.yml
+++ b/docker-compose-notif_new.yml
@@ -31,7 +31,9 @@ services:
       - rabbitmq
 
   rabbitworker:
-    build: ./workers/rabbit_worker
+    build: 
+      context: ./workers
+      dockerfile: Dockerfile_rabbit
     container_name: rabbitworker
     env_file:
       - ./.env
@@ -39,6 +41,25 @@ services:
       - RABBIT_HOST=rabbitmq
       - POSTGRES_DB=notif_db
       - POSTGRES_HOST=notif_db
+    depends_on:
+      - rabbitmq
+      - notif_db
+    networks:
+      - rabbitmq
+    restart: on-failure
+
+  enrichworker:
+    build: 
+      context: ./workers
+      dockerfile: Dockerfile_enrich
+    container_name: enrichworker
+    env_file:
+      - ./.env
+    environment:
+      - RABBIT_HOST=rabbitmq
+      - POSTGRES_DB=notif_db
+      - POSTGRES_HOST=notif_db
+      - AUTH_URL=http://flask_auth:5000/auth/api/v1/get_user_by_id
     depends_on:
       - rabbitmq
       - notif_db
