--- a/workers/Dockerfile_enrich
+++ b/workers/Dockerfile_enrich
@@ -4,4 +4,4 @@ WORKDIR /workers
 COPY requirements.txt .
 RUN pip install --upgrade pip && pip install -r requirements.txt --no-cache-dir
 COPY . .
-CMD ["python", "main.py"]
+CMD ["python", "enrichment_worker.py"]
