--- a/docker-compose-notif_new.yml
+++ b/docker-compose-notif_new.yml
@@ -83,6 +83,27 @@ services:
       - rabbitmq
     restart: on-failure
 
+  notifadmin:
+    build: 
+      context: ./notif_admin_panel
+      dockerfile: Dockerfile
+    container_name: notifadmin
+    volumes:
+      - static_volume:/app/static
+    env_file:
+      - ./.env
+    environment:
+      - POSTGRES_DB=notif_db
+      - POSTGRES_HOST=notif_db
+    depends_on:
+      - notif_db
+    command: bash -c "python script.py && gunicorn admin_notif.wsgi --bind 0.0.0.0:8082"
+    ports:
+      - '8082:8082' 
+    networks:
+      - rabbitmq
+    restart: on-failure
+
   auth_db:
     image: postgres:13-alpine
     container_name: auth_db
@@ -159,6 +180,7 @@ volumes:
   auth_db_data:
   redis_data:
   mo_data:
+  static_volume:
 
 networks:
   rabbitmq:
