--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,8 @@ requests==2.28.2
 schedule==1.1.0
 SQLAlchemy==2.0.6
 pika==1.3.1
-psycopg2==2.9.5
+psycopg2-binary==2.9.5
 flask==2.2.3
 Flask-Migrate==4.0.2
 motor==3.1.1
+django-better-admin-arrayfield==1.4.2
