--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,4 +1,4 @@
-name: UGC+ application
+name: Notification application
 
 on:
   push:
@@ -33,7 +33,7 @@ jobs:
 
     - name: Lint with mypy
       run: |
-        mypy workers/ --ignore-missing-imports
+        mypy workers/ --ignore-missing-imports --exclude db_models.py
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
