--- a/docker-compose-notif_new.yml
+++ b/docker-compose-notif_new.yml
@@ -179,6 +179,8 @@ services:
     image: mailhog/mailhog:latest
     container_name: mailhog
     restart: always
+    logging:
+      driver: 'none'
     ports:
       - 1025:1025
       - 8025:8025
