--- a/docker-compose-notif_new.yml
+++ b/docker-compose-notif_new.yml
@@ -175,17 +175,107 @@ services:
   #   networks:
   #     - rabbitmq
 
-  mailhog:
-    image: mailhog/mailhog:latest
-    container_name: mailhog
-    restart: always
-    logging:
-      driver: 'none'
-    ports:
-      - 1025:1025
-      - 8025:8025
-    networks:
-      - rabbitmq
+  # broker:
+  #   image: confluentinc/cp-server:7.3.0
+  #   hostname: broker
+  #   container_name: broker
+  #   depends_on:
+  #     - zookeeper
+  #   ports:
+  #     - "9092:9092"
+  #     - "9101:9101"
+  #   environment:
+  #     KAFKA_BROKER_ID: 1
+  #     KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+  #     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+  #     KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092
+  #     KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
+  #     KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+  #     KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+  #     KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR: 1
+  #     KAFKA_CONFLUENT_BALANCER_TOPIC_REPLICATION_FACTOR: 1
+  #     KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+  #     KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+  #     KAFKA_JMX_PORT: 9101
+  #     KAFKA_JMX_HOSTNAME: localhost
+  #     CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: broker:29092
+  #     CONFLUENT_METRICS_REPORTER_TOPIC_REPLICAS: 1
+  #     CONFLUENT_METRICS_ENABLE: 'true'
+  #     CONFLUENT_SUPPORT_CUSTOMER_ID: 'anonymous'
+  #   restart: always
+  #   networks:
+  #     - rabbitmq
+
+  # zookeeper:
+  #   image: zookeeper:3.5
+  #   container_name: zookeeper
+  #   hostname: zookeeper
+  #   networks:
+  #     - rabbitmq
+
+
+  # clickhouse-node1:
+  #   image: yandex/clickhouse-server:20.4
+  #   container_name: clickhouse-node1
+  #   hostname: clickhouse-node1
+  #   ports:
+  #     - "8123:8123"
+  #     - "9000:9000"
+  #   volumes:
+  #     - ./db/clickhouse/data/node1:/etc/clickhouse-server
+  #     - ./db/clickhouse/data/shard_1:/docker-entrypoint-initdb.d/
+  #   depends_on:
+  #     - zookeeper
+  #   networks:
+  #     - rabbitmq
+
+  # clickhouse-node2:
+  #   image: yandex/clickhouse-server:20.4
+  #   container_name: clickhouse-node2
+  #   hostname: clickhouse-node2
+  #   volumes:
+  #     - ./db/clickhouse/data/node2:/etc/clickhouse-server
+  #     - ./db/clickhouse/data/replica_2_4:/docker-entrypoint-initdb.d/
+  #   depends_on:
+  #     - zookeeper
+  #   networks:
+  #     - rabbitmq
+
+  # clickhouse-node3:
+  #   image: yandex/clickhouse-server:20.4
+  #   container_name: clickhouse-node3
+  #   hostname: clickhouse-node3
+  #   volumes:
+  #     - ./db/clickhouse/data/node3:/etc/clickhouse-server
+  #     - ./db/clickhouse/data/shard_3:/docker-entrypoint-initdb.d/
+  #   depends_on:
+  #     - zookeeper
+  #   networks:
+  #     - rabbitmq
+
+  # clickhouse-node4:
+  #   image: yandex/clickhouse-server:20.4
+  #   container_name: clickhouse-node4
+  #   hostname: clickhouse-node4
+  #   volumes:
+  #     - ./db/clickhouse/data/node4:/etc/clickhouse-server
+  #     - ./db/clickhouse/data/replica_2_4:/docker-entrypoint-initdb.d/
+  #   depends_on:
+  #     - zookeeper
+  #   networks:
+  #     - rabbitmq
+
+  # mailhog:
+  #   image: mailhog/mailhog:latest
+  #   container_name: mailhog
+  #   restart: always
+  #   logging:
+  #     driver: 'none'
+  #   ports:
+  #     - 1025:1025
+  #     - 8025:8025
+  #   networks:
+  #     - rabbitmq
 
 volumes:
   notif_db_data:
